# enigma-v300

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  README.md  check.sh  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  ci.yml  release-please.yml  test-all-implementations.yml
c/: CMakeLists.txt
c/docs/: architecture.md  contributing.md
c/src/: enigma_v300_pure_c.c  main.c
c/tests/: expect_fail.sh
c_implementation/: CONTRIBUTING.md  README.md
c_implementation/docs/: api.md
c_implementation/src/: enigma_v300_pure_c.c  enigma_v300_pure_c.h
c_implementation/tests/: test_enigma_v300.sh
cpp/: CONTRIBUTING.md  README.md
cpp/docs/: contributing.md
cpp/tests/: test_enigma_v300.sh
cpp_implementation/: CMakeLists.txt
cpp_implementation/docs/: api.md  architecture.md
cpp_implementation/src/: enigma_v300_pure_cpp.cpp
cpp_implementation/src/include/: enigma_v300_pure_cpp.h
cpp_implementation/tests/: test_enigma_v300.sh
docs/: index.md
examples/: enigma_functions_demo.py
python/: enigma_v300_classes.py  enigma_v300_functions.py
python_classes/: README.md  enigma_v300_classes.py
python_functions/: README.md  enigma_v300_functions.py
src/enigma_v300/: __init__.py  cli.py  core.py  functions.py
tests/: test_core.py  test_enigma_v300.py
